<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.aula7.parcial.View_Contact">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:padding="10dp">

            <ImageView
                android:id="@+id/id_logo"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/id_logo"
                android:layout_marginTop="14dp"
                android:layout_toEndOf="@+id/id_logo"
                android:text="Nombre Jhonatan"
                android:theme="@style/StyleTextInputWhite"
                android:id="@+id/textView4" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apellido Mideros"
                android:theme="@style/StyleTextInputWhite"
                android:layout_below="@+id/textView4"
                android:layout_toEndOf="@+id/id_logo"
                android:layout_marginTop="17dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/id_logo"
                android:text="Edad 20"
                android:theme="@style/StyleTextInputWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Telefono 3103012972"
                android:theme="@style/StyleTextInputWhite"
                android:layout_below="@+id/textView2"
                android:layout_toEndOf="@+id/id_logo"
                android:layout_marginTop="16dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:fillViewport="true"
            android:orientation="vertical"
            android:padding="30dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/StyleTextInputWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/id_txt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_email_contact" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/StyleTextInputWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/id_txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Commit"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/id_btn_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/btn_contact"
                android:theme="@style/StyleButton" />

        </LinearLayout>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>